# ros2_tasks

./: README.md
interface/: CMakeLists.txt  package.xml
task1/: package.xml  setup.cfg  setup.py
task1/task1/: node_1.py  node_2.py
task2_py/: package.xml  setup.cfg  setup.py
task2_py/task2_py/: client_member_function.py  service_member_function.py
