<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>task2_py</name>
  <version>0.0.0</version>
  <description>Python service client to multiply 2 numbers</description>
  <maintainer email="aryangupta973@gmail.com">aryan</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <exec_depend>interface</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
